Prep for binscripts role.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -14,6 +14,7 @@ compinit
 # End of lines added by compinstall
 . /home/{{ zsh_username }}/.nix-profile/etc/profile.d/nix.sh
 #source ~/.nix-profile/etc/profile.d/nix.sh
+export PATH=$PATH:{{ bin_directory }}
 # END: Base
 ###############################################################################
 
