--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -166,3 +166,10 @@ fi
 
 unset env
 # END: SSH
+###############################################################################
+
+###############################################################################
+# BEGIN: Screenfetch
+{{ nix_bin }}/screenfetch
+# END: Screenfetch
+###############################################################################
