--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -32,7 +32,6 @@ if [ -n "${commands[fzf-share]}" ]; then
   source "$(fzf-share)/completion.zsh"
 fi
 # eval "$(starship init zsh)"
-source {{ nix_share }}/zsh-powerlevel10k/powerlevel10k.zsh-theme
 eval "$(navi widget zsh)"
 # source {{ dotfiles_home }}/roles/zsh/files/aliases.zsh
 # source {{ dotfiles_home }}/roles/erlang/files/erlang.zsh
@@ -167,6 +166,13 @@ fi
 
 unset env
 # END: SSH
+###############################################################################
+
+###############################################################################
+# BEGIN: Powerlevel10K Prompt
+source {{ nix_share }}/zsh-powerlevel10k/powerlevel10k.zsh-theme
+[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+# END: Powerlevel10K Prompt
 ###############################################################################
 
 ###############################################################################
