--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -32,6 +32,7 @@ if [ -n "${commands[fzf-share]}" ]; then
   source "$(fzf-share)/completion.zsh"
 fi
 # eval "$(starship init zsh)"
+eval "$(zoxide init zsh)"
 eval "$(navi widget zsh)"
 # source {{ dotfiles_home }}/roles/zsh/files/aliases.zsh
 # source {{ dotfiles_home }}/roles/erlang/files/erlang.zsh
