--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -16,8 +16,10 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " ---------------------------------------------------------------------------
   Plug 'ryanoasis/vim-devicons'
   " ---------------------------------------------------------------------------
-  Plug 'vimwiki/vimwiki'
-  Plug 'plasticboy/vim-markdown'
+  Plug 'nvim-treesitter/nvim-treesitter', {'do': ':TSUpdate'}
+  "Plug 'vimwiki/vimwiki'
+  "Plug 'plasticboy/vim-markdown'
+  Plug 'nvim-neorg/neorg' | Plug 'nvim-lua/plenary.nvim'
   Plug 'tpope/vim-dispatch' | Plug 'radenling/vim-dispatch-neovim'
   Plug 'jeffkreeftmeijer/vim-numbertoggle'
   Plug 'juneedahamed/vc.vim'
