--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -16,7 +16,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " ---------------------------------------------------------------------------
   Plug 'ryanoasis/vim-devicons'
   " ---------------------------------------------------------------------------
-  Plug 'nvim-treesitter/nvim-treesitter', { branch = '0.5-compat', 'do': ':TSUpdate' }
+  Plug 'nvim-treesitter/nvim-treesitter', { 'branch': '0.5-compat', 'do': ':TSUpdate' }
   "Plug 'vimwiki/vimwiki'
   "Plug 'plasticboy/vim-markdown'
   Plug 'nvim-neorg/neorg' | Plug 'nvim-lua/plenary.nvim'
