Disable markdown treesitter, fix powerline ligatures.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -172,6 +172,7 @@ unset env
 ###############################################################################
 # BEGIN: Powerlevel10K Prompt
 source {{ nix_share }}/zsh-powerlevel10k/powerlevel10k.zsh-theme
+export POWERLEVEL10K_MODE=nerdfont-complete
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 # END: Powerlevel10K Prompt
 ###############################################################################
