Use regular source command.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -12,8 +12,8 @@ zstyle :compinstall filename '/home/{{ zsh_username }}/.zshrc'
 autoload -Uz compinit
 compinit
 # End of lines added by compinstall
-. /home/{{ zsh_username }}/.nix-profile/etc/profile.d/nix.sh
-#source ~/.nix-profile/etc/profile.d/nix.sh
+# . /home/{{ zsh_username }}/.nix-profile/etc/profile.d/nix.sh
+source ~/.nix-profile/etc/profile.d/nix.sh
 export PATH=$PATH:{{ bin_directory }}
 # END: Base
 ###############################################################################
