Fix broot path.

--- a/templates/nvim/nvim-config/fzf-floaterm.vimrc.j2
+++ b/templates/nvim/nvim-config/fzf-floaterm.vimrc.j2
@@ -12,7 +12,7 @@ let g:fzf_floaterm_newentries = {
     \ 'cmd': '{{ nix_bin }}/ranger' },
   \ '+broot' : {
     \ 'title': 'Broot File Manager',
-    \ 'cmd': '{{ nix_bin }}/br' },
+    \ 'cmd': '{{ nix_bin }}/broot' },
   \ '+pwsh' : {
     \ 'title': 'Powershell',
     \ 'cmd': 'pwsh' }
