Switch from sandwich to vim-surround.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -5,7 +5,8 @@ let g:python3_host_prog="{{ nix_bin }}/nvim-python3"
 " Plugins ---------------------------------------------------------------------
 call plug#begin('{{ nvim_plugged_dir }}')
   " Motion/Text Objects -------------------------------------------------------
-  Plug 'machakann/vim-sandwich'
+  " Plug 'machakann/vim-sandwich'
+  Plug 'tpope/vim-surround'
   Plug 'justinmk/vim-sneak'
   " Plug 'rhysd/clever-f.vim'
   " Theme ---------------------------------------------------------------------
