Template coc.nvim config, add nix path to node.

--- a/templates/nvim/nvim-config/coc.vimrc.j2
+++ b/templates/nvim/nvim-config/coc.vimrc.j2
@@ -1,50 +1,4 @@
-"call coc#config('languageserver', {
-"        \ 'ccls': {
-"        \     "command": "ccls",
-"        \     "trace.server": "verbose",
-"        \     "filetypes": ["c", "cpp", "objc", "objcpp"],
-"        \     "rootPatterns": [".ccls-root", "compile_commands.json"],
-"        \     "initializationOptions": {
-"        \         "cache": {
-"        \              "directory": ".ccls-cache"
-"        \          },
-"        \          "client": {
-"        \              "snippetSupport": true
-"        \          },
-"        \          "highlight": { "lsRanges" : true }
-"        \     }
-"        \ }
-"   "languageserver": {
-"       "ccls": {
-"           "command": "ccls",
-"           "trace.server": "verbose",
-"           "filetypes": ["h", "hpp", "c", "cc", "cpp", "objc", "objcpp"],
-"           "rootPatterns": [".ccls-root", "compile_commands.json"],
-"           "initializationOptions": {
-"               "cache": {
-"                   "directory": ".ccls-cache"
-"               },
-"               "client": {
-"                   "snippetSupport": true
-"               },
-"               "clang": {
-"                   "excludeArgs": ["-Wall", "-Werror"],
-"                   "extraArgs": ["-ferror-limit=0", "--gcc-toolchain=/opt/rh/devtoolset-2/root/usr"]
-"               },
-"               "highlight": { "lsRanges" : true }
-"           }
-"        \})
-"call coc#config('clangd', {
-"                    \   "enabled": true,
-"                    \   "arguments": [
-"                    \       "--background-index",
-"                    \       "--pch-storage=memory",
-"                    \       "--limit-results=0",
-"                    \       "--j=4",
-"                    \       "--all-scopes-completion"
-"                    \   ],
-"                    \   "semanticHighlighting": true
-"                    \})
+let g:coc_node_path = '{{ nix_bin }}/node'
 
 autocmd FileType cpp let b:coc_root_patterns = ['.git', '.svn', 'CMakeLists.txt']
 autocmd FileType hpp let b:coc_root_patterns = ['.git', '.svn', 'CMakeLists.txt']
