Add ranger plugin.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -18,8 +18,6 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'ryanoasis/vim-devicons'
   " ---------------------------------------------------------------------------
   Plug 'nvim-treesitter/nvim-treesitter', { 'branch': '0.5-compat', 'do': ':TSUpdate' }
-  "Plug 'vimwiki/vimwiki'
-  "Plug 'plasticboy/vim-markdown'
   Plug 'nvim-neorg/neorg' | Plug 'nvim-lua/plenary.nvim'
   Plug 'tpope/vim-dispatch' | Plug 'radenling/vim-dispatch-neovim'
   Plug 'jeffkreeftmeijer/vim-numbertoggle'
@@ -35,6 +33,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'skywind3000/asyncrun.vim'
   Plug 'skywind3000/asyncrun.extra'
   Plug 'mhinz/vim-signify'
+  Plug 'kevinhwang91/rnvimr'
   " Split UI ------------------------------------------------------------------
   "Plug 'Iron-E/vim-libmodal'
   "Plug 'Iron-E/nvim-libmodal'
