--- a/templates/nvim/nvim-config/rnvimr.vimrc.j2
+++ b/templates/nvim/nvim-config/rnvimr.vimrc.j2
@@ -25,8 +25,8 @@ let g:rnvimr_ranger_cmd = 'ranger --cmd="set draw_borders both"'
 " Link CursorLine into RnvimrNormal highlight in the Floating window
 highlight link RnvimrNormal CursorLine
 
-nnoremap <silent> <leader>r :RnvimrToggle<CR>
-tnoremap <silent> <leader>r <C-\><C-n>:RnvimrToggle<CR>
+" nnoremap <silent> <leader>r :RnvimrToggle<CR>
+" tnoremap <silent> <leader>r <C-\><C-n>:RnvimrToggle<CR>
 
 " Resize floating window by all preset layouts
 tnoremap <silent> <M-i> <C-\><C-n>:RnvimrResize<CR>
