Disable column cursor.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -103,7 +103,7 @@ call plug#end()
 " Search  ---------------------------------------------------------------------
 set ignorecase smartcase
 " Cursor  ---------------------------------------------------------------------
-set cursorline cursorcolumn
+set cursorline
 " Line Numbers  ---------------------------------------------------------------
 set number relativenumber
 "augroup numbertoggle
