--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -176,3 +176,49 @@ set number relativenumber
     exe 'source' f
   endfor
 " Plugin Settings(End) --------------------------------------------------------
+
+" Treesitter/Neorg Settings ---------------------------------------------------
+lua <<EOF
+    local parser_config = require "nvim-treesitter.parsers".get_parser_configs()
+    parser_config.norg = {
+        install_info = {
+            url = "https://github.com/nvim-neorg/tree-sitter-norg",
+            files = { "src/parser.c", "src/scanner.cc" },
+            branch = "main"
+        },
+    }
+
+    require'nvim-treesitter.configs'.setup {
+      highlight = {
+        enable = true,
+        disable = {},
+      },
+      ensure_installed = {
+        "norg",
+        "haskell",
+        "c",
+        "cpp",
+        "json",
+        "yaml",
+        "rust"
+      },
+    }
+EOF
+
+lua << EOF
+    require('neorg').setup {
+        -- Tell Neorg what modules to load
+        load = {
+            ["core.defaults"] = {}, -- Load all the default modules
+            ["core.norg.concealer"] = {}, -- Allows for use of icons
+            ["core.norg.dirman"] = { -- Manage your directories with Neorg
+                config = {
+                    workspaces = {
+                        my_workspace = "~/Code"
+                    }
+                }
+            }
+        },
+    }
+EOF
+" Treesitter/Neorg Settings(End) ----------------------------------------------
