Provide full path to ripgrep.

--- a/templates/nvim/nvim-config/fzf.vimrc.j2
+++ b/templates/nvim/nvim-config/fzf.vimrc.j2
@@ -14,7 +14,7 @@
 " \   fzf#vim#with_preview({'dir': systemlist('git rev-parse --show-toplevel')[0]}), <bang>0)
 
   function! RipgrepFzf(query, fullscreen)
-    let command_fmt = 'rg --column --line-number --no-heading --color=always --smart-case %s || true'
+    let command_fmt = '{{ nix_bin }}/rg --column --line-number --no-heading --color=always --smart-case %s || true'
     let initial_command = printf(command_fmt, shellescape(a:query))
     let reload_command = printf(command_fmt, '{q}')
     let spec = {'options': ['--phony', '--query', a:query, '--bind', 'change:reload:'.reload_command]}
@@ -131,7 +131,7 @@
 "" Similarly, we can apply it to fzf#vim#grep. To use ripgrep instead of ag:
 "  command! -bang -nargs=* Rg
 "    \ call fzf#vim#grep(
-"    \   'rg --column --line-number --no-heading --color=always '.shellescape(<q-args>), 1,
+"    \   '{{ nix_bin }}/rg --column --line-number --no-heading --color=always '.shellescape(<q-args>), 1,
 "    \   <bang>0 ? fzf#vim#with_preview('up:60%')
 "    \           : fzf#vim#with_preview('right:50%:hidden', '?'),
 "    \   <bang>0)
