Change grep search shortcut.

--- a/templates/nvim/nvim-config/fzf.vimrc.j2
+++ b/templates/nvim/nvim-config/fzf.vimrc.j2
@@ -22,7 +22,7 @@
   endfunction
   command! -nargs=* -bang RG call RipgrepFzf(<q-args>, <bang>0)
   command! -nargs=* -bang RGCWord call RipgrepFzf(expand('<cword>'), <bang>0)
-  nnoremap <C-_> :RG<cr>
+  nnoremap <C-q> :RG<cr>
   nnoremap <leader>/ :RGCWord<cr>
 " nnoremap <C-_> :Rg<cr>
 
