--- a/templates/nvim/nvim-config/fzf.vimrc.j2
+++ b/templates/nvim/nvim-config/fzf.vimrc.j2
@@ -18,7 +18,7 @@
   nnoremap <C-q> :RG<cr>
   nnoremap <leader>/ :RGCWord<cr>
 
-  nnoremap <C-@> :Commands<cr>
+  nnoremap : :Commands<cr>
 
   function! s:fzf_sink(what)
       let p1 = stridx(a:what, '<')
