--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -45,6 +45,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   "Plug 'simeji/winresizer'
   "Plug 'yaronkh/vim-winmanip'
   " Selection UI --------------------------------------------------------------
+  Plug 'nvim-telescope/telescope.nvim'
   "Plug 'Yggdroot/LeaderF', { 'do': './install.sh' }
   Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
   Plug 'junegunn/fzf.vim'
