--- a/templates/nvim/nvim-config/coc.vimrc.j2
+++ b/templates/nvim/nvim-config/coc.vimrc.j2
@@ -51,9 +51,9 @@ nmap <silent> [g <Plug>(coc-diagnostic-prev)
 nmap <silent> ]g <Plug>(coc-diagnostic-next)
 
 " Remap keys for gotos
-nmap <silent> gd <Plug>(coc-definition)
-nmap <silent> gy <Plug>(coc-type-definition)
-nmap <silent> gi <Plug>(coc-implementation)
+"nmap <silent> gd <Plug>(coc-definition)
+"nmap <silent> gy <Plug>(coc-type-definition)
+"nmap <silent> gi <Plug>(coc-implementation)
 "nmap <silent> gr <Plug>(coc-references)
 "nnoremap <silent> gs  :<C-u>CocList -I outline<cr>
 "nnoremap <silent> gS :<C-u>CocList -I symbols<cr>
