--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -194,6 +194,7 @@ EOF
   nnoremap <silent> g/ :Telescope coc document_symbols<cr>
   nnoremap <silent> gS :Telescope coc workspace_symbols<cr>
   nnoremap <silent> gr :Telescope coc references<cr>
+  nnoremap <silent> gc :Telescope coc commands<cr>
 " Telescope Settings(End) -----------------------------------------------------
 
 " Treesitter/Neorg Settings ---------------------------------------------------
