Set node-client path.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -1,5 +1,6 @@
 " Python Host Version
 let g:python3_host_prog="{{ nix_bin }}/nvim-python3"
+let g:node_host_prog="{{ nix_bin }}/neovim-node-host"
 " VTE Workaround
 "set guicursor=
 " Plugins ---------------------------------------------------------------------
