Fix unused export.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -148,7 +148,7 @@ cdg() {
       cd "$dest_dir"
    fi
 }
-export -f cdg > /dev/null
+#export -f cdg > /dev/null
 # END: Aliases
 ###############################################################################
 
