--- a/templates/nvim/nvim-config/coc.vimrc.j2
+++ b/templates/nvim/nvim-config/coc.vimrc.j2
@@ -51,16 +51,17 @@ nmap <silent> [g <Plug>(coc-diagnostic-prev)
 nmap <silent> ]g <Plug>(coc-diagnostic-next)
 
 " Remap keys for gotos
-"nmap <silent> gd <Plug>(coc-definition)
-"nmap <silent> gy <Plug>(coc-type-definition)
-"nmap <silent> gi <Plug>(coc-implementation)
-"nmap <silent> gr <Plug>(coc-references)
+nmap <silent> gd <Plug>(coc-definition)
+nmap <silent> gy <Plug>(coc-type-definition)
+nmap <silent> gi <Plug>(coc-implementation)
+nmap <silent> gr <Plug>(coc-references)
+nnoremap <silent> g/  :CocFzfList outline<cr>
+nnoremap <silent> gs :CocFzfList symbols<cr>
+nnoremap <silent> gS :CocFzfList symbols --kind<cr>
 "nnoremap <silent> gs  :<C-u>CocList -I outline<cr>
 "nnoremap <silent> gS :<C-u>CocList -I symbols<cr>
 "nnoremap <silent> gs  :Clap coc_outline<cr>
 "nnoremap <silent> gS :Clap coc_symbols<cr>
-"nnoremap <silent> g/  :CocFzfList outline<cr>
-"nnoremap <silent> gS :CocFzfList symbols<cr>
 
 " nn <silent> K :call CocActionAsync('doHover')<cr>
 "" Use K to show documentation in preview window
