Fix broken remap.

--- a/templates/nvim/nvim-config/coc.vimrc.j2
+++ b/templates/nvim/nvim-config/coc.vimrc.j2
@@ -56,8 +56,8 @@ nmap <silent> gy <Plug>(coc-type-definition)
 nmap <silent> gi <Plug>(coc-implementation)
 nmap <silent> gr <Plug>(coc-references)
 nnoremap <silent> g/  :CocFzfList outline<cr>
-nnoremap <silent> gs :CocFzfList symbols<cr>
-nnoremap <silent> gS :CocFzfList symbols --kind<cr>
+nnoremap <silent> gS :CocFzfList symbols<cr>
+"nnoremap <silent> gS :CocFzfList symbols --kind<cr>
 "nnoremap <silent> gs  :<C-u>CocList -I outline<cr>
 "nnoremap <silent> gS :<C-u>CocList -I symbols<cr>
 "nnoremap <silent> gs  :Clap coc_outline<cr>
